implement the insertion sorting. :pear: sparrowli

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,15 @@ message(STATUS "CMAKE_VERSION: [${CMAKE_VERSION}]")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -ftest-coverage -fprofile-arcs")
 
+set(CMAKE_CXX_STANDARD 11)
+
 set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/googletest)
 
 message(STATUS "PROJECT_SOURCE_DIR : [${PROJECT_SOURCE_DIR}]")
 set (PROJECT_SOURCE_FILES 
+  ${PROJECT_SOURCE_DIR}/src/checks.cc
   ${PROJECT_SOURCE_DIR}/src/output_rate_calculator.cc
   ${PROJECT_SOURCE_DIR}/main.cc)
 
