--- a/spec/CMakeLists.txt
+++ b/spec/CMakeLists.txt
@@ -16,7 +16,11 @@ set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
 message(STATUS "PROJECT_SOURCE_DIR : [${PROJECT_SOURCE_DIR}]")
 set (PROJECT_SOURCE_FILES 
   ${PROJECT_SOURCE_DIR}/src/output_rate_calculator.cc
+  ${PROJECT_SOURCE_DIR}/src/base_algorithm.cc
+  ${PROJECT_SOURCE_DIR}/src/checks.cc
   ${PROJECT_SOURCE_DIR}/spec/output_rate_calculator_spec.cc
+  ${PROJECT_SOURCE_DIR}/spec/base_algorithm_spec.cc
+  ${PROJECT_SOURCE_DIR}/spec/safe_compare_spec.cc
   ${PROJECT_SOURCE_DIR}/spec/gmock_main.cc)
 
 include_directories (
