--- a/spec/CMakeLists.txt
+++ b/spec/CMakeLists.txt
@@ -19,8 +19,10 @@ set (PROJECT_SOURCE_FILES
   ${PROJECT_SOURCE_DIR}/src/base_algorithm.cc
   ${PROJECT_SOURCE_DIR}/src/lc_two_sum.cc
   ${PROJECT_SOURCE_DIR}/src/lc_add_two_numbers.cc
+  ${PROJECT_SOURCE_DIR}/src/lc_longest_palindromic.cc
   ${PROJECT_SOURCE_DIR}/src/lc_longest_substring_without_repeating_characters.cc
   ${PROJECT_SOURCE_DIR}/src/lc_median_of_two_sorted_arrays.cc
+  ${PROJECT_SOURCE_DIR}/src/lc_regular_expression_matching.cc
   ${PROJECT_SOURCE_DIR}/src/checks.cc
   ${PROJECT_SOURCE_DIR}/src/int_stack.cc
   ${PROJECT_SOURCE_DIR}/src/dfs.cc
@@ -35,6 +37,8 @@ set (PROJECT_SOURCE_FILES
   ${PROJECT_SOURCE_DIR}/spec/lc_add_two_numbers_spec.cc
   ${PROJECT_SOURCE_DIR}/spec/lc_longest_substring_without_repeating_characters_spec.cc
   ${PROJECT_SOURCE_DIR}/spec/lc_median_of_two_sorted_arrays_spec.cc
+  ${PROJECT_SOURCE_DIR}/spec/lc_longest_palindromic_spec.cc
+  ${PROJECT_SOURCE_DIR}/spec/lc_regular_expression_matching_spec.cc
   ${PROJECT_SOURCE_DIR}/spec/gmock_main.cc)
 
 include_directories (
